image stretch distortion fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -368,6 +368,7 @@ select::-ms-expand {
   // background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
+  object-fit: none;
   box-sizing: border-box;
 }
 
